# XHSContentFetcher

./: .env.example  .gitignore  README.md  Tempate.md  pyproject.toml
src/xhs_content_fetcher/: __init__.py  cli.py  config.py  deepseek.py  fetcher.py  markdown_writer.py  media.py  obsidian.py  ocr_engine.py  url_parser.py  utils.py  video_tools.py  workflow.py
